# wcRay

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pic.ppm
src/core/: camera.cpp  camera.h  color.cpp  color.h  common.cpp  common.h  main.cpp  onb.cpp  onb.h  path_tracing.h  ray.cpp  ray.h  rt_stb_image.cpp  stb_image.h  vec.cpp  vec.h
src/geometries/: aabb.cpp  aabb.h  box.cpp  box.h  bvh.cpp  bvh.h  flip_face.cpp  flip_face.h  hit.h  hittable_list.cpp  hittable_list.h  moving_sphere.cpp  moving_sphere.h  rectangle.cpp  rectangle.h  rotate.cpp  rotate.h  sphere.cpp  sphere.h  translate.cpp  translate.h  triangle.cpp  triangle.h  volumn.cpp  volumn.h
src/material/: dielectric.cpp  dielectric.h  diffuse_light.cpp  diffuse_light.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
src/path_tracing/: camera.hpp  color.hpp  hittable_list.hpp  main.cpp  path_tracing.hpp  random_scene.cpp  ray.hpp  rt_stb_image.hpp  stb_image.h  utils.hpp  vec3.hpp
src/path_tracing/core/: camera.hpp  color.hpp  main.cpp  onb.hpp  path_tracing.hpp  ray.hpp  utils.hpp  vec3.hpp
src/path_tracing/geometries/: aabb.hpp  box.hpp  bvh.hpp  flip_face.hpp  hit.hpp  hittable.hpp  hittable_list.hpp  moving_sphere.hpp  rectangle.hpp  rotate.hpp  sphere.hpp  translate.hpp  triangle.hpp  volumn.hpp
src/path_tracing/material/: dielectric.hpp  diffuse_light.hpp  isotropic.hpp  lambertian.hpp  material.hpp  metal.hpp
src/path_tracing/pdf/: cosine_pdf.hpp  hittable_pdf.hpp  mixture_pdf.hpp  pdf.hpp
src/path_tracing/texture/: alternating_texture.hpp  dielectric.hpp  image_texture.hpp  lambertian.hpp  material.hpp  metal.hpp  noise_texture.hpp  texture.hpp
src/pdf/: cosine_pdf.cpp  cosine_pdf.h  hittable_pdf.cpp  hittable_pdf.h  mixture_pdf.cpp  mixture_pdf.h  pdf.h
src/texture/: alternating_texture.cpp  alternating_texture.h  image_texture.cpp  image_texture.h  noise_texture.cpp  noise_texture.h  texture.h
